--- a/templates/global/base.html
+++ b/templates/global/base.html
@@ -22,6 +22,8 @@
                         <a href="#">Login</a>
                         <a href="#">Registrar</a>
                     {% endif %}
+                    <a href="https://www.linkedin.com/in/tiagogomestsg/" target="_blank">Linked<i class="fab fa-linkedin-in"></i>- Tiago Gomes</a>
+                    <a href="https://github.com/Tiago-Gomes-tsg" target="_blank"><i class="fab fa-github"></i> GitHub - Tiago Gomes</a>
                     <button id="darkModeToggle" aria-label="Alternar modo noturno">
                         <i class="fas fa-moon"></i>
                     </button>
